# nba-sentiment

./: README.md  get_comments.py  perform_SA.py  process_text.py  pyproject.toml  reddit_api_test.ipynb  requirements.txt  sentiment_analysis.ipynb  testing.ipynb
data/: 1365zfw.csv  1384hu8.csv  13a5us2.csv  13can6x.csv  13e8sqq.csv  13g2qr3.csv  game_1.csv  game_2.csv  game_3.csv  game_4.csv  game_5.csv  game_6.csv
data/GSWvLAL/: 1365zfw.csv  1384hu8.csv  13a5us2.csv  13can6x.csv  13e8sqq.csv  13g2qr3.csv
data/MIAvBOS/: 13khtbi.csv  13mbddv.csv  13o9v3a.csv  13q4i9d.csv  13rww5n.csv  13tlgsh.csv  13va0qi.csv  game_1.csv  game_2.csv  game_3.csv  game_4.csv  game_5.csv
testing/: multi.ipynb  stanza_test.ipynb  task.py  testing.ipynb
