[tool.poetry]
name = "nba-sentiment"
version = "0.1.0"
description = ""
authors = ["Michal Wodnicki <michalwodnicki23@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
praw = "^7.7.0"
nltk = "^3.8.1"
textblob = "^0.17.1"
requests = "^2.31.0"
seaborn = "^0.12.2"
pandas = "^2.0.2"
pytz = "^2023.3"
datetime = "^5.1"
numpy = "^1.24.3"
stanza = "^1.5.0"
jupyter = "^1.0.0"
transformers = "^4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
